fix: add gap

--- a/webview/styles/window-controls.css
+++ b/webview/styles/window-controls.css
@@ -31,6 +31,7 @@
 #navbar {
     margin-bottom: 15px;
     display: flex;
+    gap: 4px;
 }
 
 #window-title {
